<resources>
    <string name="app_name">Notes</string>
    <string name="user_room_database">User Room DataBase</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="name">Name</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="notes">Notes</string>
    <string name="profile">Profile</string>
    <string name="invalid_email">Please enter a valid email address</string>
    <string name="invalid_name">Please enter a valid name</string>
    <string name="invalid_password">Please enter a valid password</string>
    <string name="invalid_confirm_password">Please enter a valid confirm password</string>
    <string name="invalid_user">Invalid email/password</string>
    <string name="password_mismatch">Confirm password doesn\'t match</string>
    <string name="reg_success">Registration successful</string>
    <string name="user_exist">User already exist</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">title</string>
    <string name="edit_profile">Edit</string>
    <string name="save">Save</string>
    <string name="description">description</string>
</resources>
