<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context=".views.activities.AddNotesActivity">

    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/title"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/notes_background"
        />

    <EditText
        android:id="@+id/et_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:minHeight="100dp"
        android:padding="10dp"
        android:gravity="start"
        android:inputType="text"
        android:hint="@string/description"
        android:background="@drawable/notes_background"/>

    <android.support.design.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        />



</LinearLayout>